--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Homework 11</title>
+  <link rel="stylesheet" href="./sass/index.scss">
+</head>
+
+<body>
+
+  <header class="header scrollto">
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+        <button class="button-search" type="submit"></button>
+      </form>
+    </div>
+  </header>
+
+<section class="gallery-card">
+    <div class="gallery ">
+      <!-- Картки зображень -->
+      
+    
+    </div>
+</section >
+ <button type="button" class="load-more is-hidden">Load more</button>
+
+  <script src="./js/index.js" type="module"></script>
+</body>
+
 </html>
